# trander-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  confirm-db-connection.sh  country.json  docker-compose.sh  docker-compose.yml  justfile  package.json  run_migration.sh
.github/workflows/: claude-code-review.yml  claude.yml
migrations/2023-02-05-114304_google_place_ids/: down.sql  up.sql
migrations/2023-02-05-115341_m_countries/: down.sql  up.sql
migrations/2023-02-05-115523_m_directions/: down.sql  up.sql
migrations/2023-02-05-115731_m_exist_country_prefixes/: down.sql  up.sql
migrations/2023-02-05-120111_m_ratings/: down.sql  up.sql
migrations/2023-02-05-120423_m_ways/: down.sql  up.sql
migrations/2023-02-05-120540_request_count_historys/: down.sql  up.sql
migrations/2023-02-05-120731_request_limits/: down.sql  up.sql
migrations/2023-02-05-121215_users/: up.sql
migrations/2023-02-05-121321_settings/: up.sql
migrations/2023-02-05-121424_setting_historys/: down.sql  up.sql
migrations/2023-09-29-143231_alter_definition_in_request_limits/: down.sql  up.sql
migrations/2023-10-06-135015_delete_unnecessary_tables/: down.sql  up.sql
migrations/2023-10-09-084046_modify_definition_of_users_table/: up.sql
migrations/2023-10-09-085905_timestamp_to_datetime/: up.sql
src/: api.rs  country.json  db.rs  from_request.rs  handler.rs  handlers.rs  lib.rs  logging.rs  main.rs  middleware.rs  model.rs  repository.rs  response.rs  schema.rs  service.rs  tests.rs  use_case.rs  util.rs
src/api/: api_handler.rs  geo_db_cities.rs  near_by_search.rs
src/error/: api_error.rs  http_error.rs
src/from_request/: backpacker.rs  cities.rs  near_by_search.rs  settings.rs
src/handler/: backpacker.rs  cities.rs  cities_backpacker.rs  index.rs  near_by_search.rs  settings.rs
src/handlers/: mod.rs  settings.rs
src/logging/: debug.rs  error.rs  info.rs
src/middleware/: error_handler.rs  jwt.rs  post_processing.rs
src/model/: google_place_ids.rs  request_limits.rs  setting.rs  user.rs
src/repository/: google_place_ids.rs  request_limits.rs  settings.rs  users.rs
tests/: tests.rs
(+29 files in other folders)
