[package]
name = "trander-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
diesel = { version = "2.0.3", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
mockall = "0.11.4"
