[package]
name = "trander_rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
diesel = { version = "2.0.3", features = ["mysql", "chrono", "r2d2", "numeric"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
mockall = "0.11.4"
actix-rt = "2.8.0"
rstest = "0.17.0"
rust_decimal = "1.29.1"
bigdecimal = {version = "0.3.1", features = ["serde"]}
futures = "0.3.28"
geo = "0.25.1"
geo-types = "0.7.10"
rand = "0.8.5"
awc = "3.1.1"
reqwest = "0.11.18"
